--- a/charts/forms-flow-bpm/templates/secrets.yaml
+++ b/charts/forms-flow-bpm/templates/secrets.yaml
@@ -13,4 +13,6 @@ type: Opaque
 stringData:
   CAMUNDA_JDBC_PASSWORD: "{{ .Values.camunda.jdbc.password }}"
   CAMUNDA_FORMBUILDER_PIPELINE_PASSWORD: "{{ .Values.camunda.formBuilder.password }}"
+  CAMUNDA_JDBC_USER: "{{ .Values.camunda.jdbc.username}}"
+  CAMUNDA_DATABASE_NAME: "{{.Values.camunda.database.name}}"
 {{- end }}
