--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -37,8 +37,8 @@ data:
     FORMSFLOW_ADMIN_BASE: https://{{tpl (index .Values "forms-flow-admin" "ingress" "hostname") .}}/api
     MODEL_ID: "Seethal/sentiment_analysis_generic_dataset"
     INSIGHT_API_URL: https://{{tpl (index .Values "forms-flow-analytics" "ingress" "hostname") .}}
-    KEYCLOAK_ENABLE_CLIENT_AUTH: "false"
-    MULTI_TENANCY_ENABLED: "false"
+    KEYCLOAK_ENABLE_CLIENT_AUTH: {{tpl (index .Values "forms-flow-idm" "keycloak" "EnableKeycloakClientAuth" ) .}}
+    MULTI_TENANCY_ENABLED: {{tpl (index .Values "forms-flow-web" "EnableMultitenant") .}}
     DATA_ANALYSIS_URL:  https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}
     NODE_ENV: "production"
     CUSTOM_SUBMISSION_URL: ""
@@ -49,9 +49,9 @@ data:
     EXPORT_PDF_ENABLED: "{{.Values.export_pdf_enabled}}"
     REDIS_HOST: "{{.Values.redis_host}}"
     REDIS_PORT: "{{.Values.redis_port}}"
-    REDIS_ENABLED: "false"
+    REDIS_ENABLED: "{{.Values.EnableRedis}}"
     CHROME_DRIVER_PATH: "/usr/local/bin/chromedriver"
-    ENABLE_CHATBOT: "false"
+    ENABLE_CHATBOT: "{{.Values.EnableChatBot}}"
     CHATBOT_URL: "https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}/conversations"
     ENABLE_LOW_CODE_DESIGNER: "false"
     ELASTIC_SERVER: "{{.Values.elastic_server}}"
