--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -37,12 +37,14 @@ forms-flow-analytics:
       hostname: forms-flow-analytics-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
 forms-flow-idm:
   keycloak:
+    EnableKeycloakClientAuth: false
     ingress:
       hostname: forms-flow-idm-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
   realm: forms-flow-ai
   context-path: /auth
 
 forms-flow-web:
+  EnableMultitenant: false
   clientid: forms-flow-web
   ingress:
       hostname: forms-flow-web-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
@@ -213,6 +215,8 @@ websocket_encrypt_key: "FormsFlow.AI"
 insight_api_key: ""
 redis_host: ""
 redis_port: ""
+EnableRedis: "false"
+EnableChatBot: "false"
 redis_pass_code: ""
 draft_enabled: "true"
 export_pdf_enabled: "false"
