--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1079,8 +1079,12 @@ database:
   password: postgres
   servicename: forms-flow-ai-postgresql-ha-pgpool
   port: 5432
-  url: "postgresql://{{.Values.database.username}}:{{.Values.database.password}}@{{.Values.database.servicename}}:{{.Values.database.port}}/{{.Chart.Name}}"
-
-externalDatabase:
-  existingDatabaseUrlKey: "" 
-  existingSecretName: ""
+  dbName: forms-flow-analytics
+ExternalDatabase:
+  ExistingDatabaseNameKey: ""
+  ExistingDatabaseUserNameKey: ""
+  ExistingDatabasePasswordKey: ""
+  ExistingDatabaseHostKey: ""
+  ExistingDatabasePortKey: ""
+  ExistingSecretName: "" #name of the existing secret
+  ExistingConfigmapName: ""
