analytics configurations updated

--- a/charts/forms-flow-analytics/templates/scheduler.yaml
+++ b/charts/forms-flow-analytics/templates/scheduler.yaml
@@ -87,19 +87,34 @@ spec:
         lifecycle: {{- include "common.tplvalues.render" (dict "value" .Values.scheduler.lifecycleHooks "context" $) | nindent 12 }}
         {{- end }}
         env:
-        {{- if .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
+        {{- $secretName := .Values.ExternalDatabase.ExistingSecretName | default .Chart.Name }}
+        {{- $configmapName := .Values.ExternalDatabase.ExistingConfigmapName | default .Chart.Name }}
+        {{- with .Values.ExternalDatabase }}
+        - name: DB_NAME
           valueFrom:
             secretKeyRef:
-              key: {{ .Values.externalDatabase.existingDatabaseUrlKey }}
-              name: "{{ .Values.externalDatabase.existingSecretName }}"
-        {{- end }}
-        {{- if not .Values.externalDatabase.existingDatabaseUrlKey }}
-        - name: REDASH_DATABASE_URL
+              key: {{ .ExistingDatabaseNameKey | default "DATABASE_NAME" }}
+              name: "{{ $secretName }}"
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: {{ .ExistingDatabasePasswordKey | default "DATABASE_PASSWORD" }}
+              name: "{{ $secretName }}"
+        - name: DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+              key: {{ .ExistingDatabaseUserNameKey | default "DATABASE_USERNAME" }}
+              name: "{{ $secretName }}"
+        - name: DB_PORT
           valueFrom:
             configMapKeyRef:
-              key: REDASH_DATABASE_URL
-              name: "{{ .Chart.Name }}"
+              key: {{ .ExistingDatabasePortKey | default "DATABASE_PORT" }}
+              name: "{{ $configmapName }}"
+        - name: DB_HOST
+          valueFrom:
+            secretKeyRef:
+              key: {{ .ExistingDatabaseHostKey | default "DATABASE_HOST" }}
+              name: "{{ $configmapName }}"
         {{- end }}
         {{- if .Values.scheduler.extraEnvVars }}
         {{- include "common.tplvalues.render" (dict "value" .Values.scheduler.extraEnvVars "context" $) | nindent 12 }}
