Added Language in forms-flow-web

--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -18,6 +18,8 @@ data:
   ENABLE_DASHBOARDS_MODULE: "true"
   ENABLE_PROCESSES_MODULE: "true"
   ENABLE_APPLICATIONS_MODULE: "true"
+  REACT_APP_LANGUAGE: "{{tpl .Values.language .}}"
+
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -63,5 +65,6 @@ data:
         "REACT_APP_ENABLE_CHATBOT": "${REACT_APP_ENABLE_CHATBOT}",
         "REACT_APP_CHATBOT_URL": "${REACT_APP_CHATBOT_URL}",
         "REACT_APP_ENABLE_LOW_CODE_DESIGNER": "${ENABLE_LOW_CODE_DESIGNER}",
-        "REACT_APP_KEYCLOAK_URL_HTTP_RELATIVE_PATH": "${KEYCLOAK_URL_HTTP_RELATIVE_PATH}"
+        "REACT_APP_KEYCLOAK_URL_HTTP_RELATIVE_PATH": "${KEYCLOAK_URL_HTTP_RELATIVE_PATH}",
+        "REACT_APP_LANGUAGE": "${REACT_APP_LANGUAGE}"
       }
