--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -21,3 +21,4 @@ data:
   ENABLE_DASHBOARDS_MODULE: "true"
   ENABLE_PROCESSES_MODULE: "true"
   ENABLE_APPLICATIONS_MODULE: "true"
+  REACT_APP_LANGUAGE: "{{tpl .Values.Language .}}"
