--- a/charts/forms-flow-web/templates/deployment.yaml
+++ b/charts/forms-flow-web/templates/deployment.yaml
@@ -249,6 +249,11 @@ spec:
               configMapKeyRef:
                 key: KEYCLOAK_URL_HTTP_RELATIVE_PATH
                 name: "{{ .Values.formsflow.configmap }}"
+          - name: REACT_APP_LANGUAGE
+            valueFrom:
+              configMapKeyRef:
+                key: REACT_APP_LANGUAGE
+                name: "{{ .Chart.Name }}"
           {{- if .Values.extraEnvVars }}
           {{- include "common.tplvalues.render" (dict "value" .Values.extraEnvVars "context" $) | nindent 8 }}
           {{- end }}
