--- a/charts/forms-flow-web/templates/template-configmap.yaml
+++ b/charts/forms-flow-web/templates/template-configmap.yaml
@@ -33,7 +33,7 @@ data:
         "REACT_APP_DRAFT_ENABLED": "${REACT_APP_DRAFT_ENABLED}",
         "REACT_APP_DRAFT_POLLING_RATE": "${REACT_APP_DRAFT_POLLING_RATE}",
         "REACT_APP_EXPORT_PDF_ENABLED": "${REACT_APP_EXPORT_PDF_ENABLED}",
-
+        "REACT_APP_LANGUAGE": "${REACT_APP_LANGUAGE}",
         "REACT_APP_OPENTELEMETRY_SERVICE": "${OPENTELEMETRY_SERVICE}",
         "REACT_APP_PUBLIC_WORKFLOW_ENABLED": "${REACT_APP_PUBLIC_WORKFLOW_ENABLED}",
         "REACT_APP_WEB_BASE_CUSTOM_URL": "${WEB_BASE_CUSTOM_URL}",
