Updated language config in forms-flow-web

--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -106,6 +106,7 @@ mongodb:
       - ReadWriteOnce
     size: 8Gi
     mountPath: /bitnami/mongodb
+    storageClass: ""
   serviceAccount:
     create: true
   
