--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -18,7 +18,7 @@ data:
   ENABLE_DASHBOARDS_MODULE: "true"
   ENABLE_PROCESSES_MODULE: "true"
   ENABLE_APPLICATIONS_MODULE: "true"
-  REACT_APP_LANGUAGE: "{{tpl .Values.language .}}"
+  REACT_APP_LANGUAGE: "{{tpl .Values.Language .}}"
 
 ---
 apiVersion: v1
