--- a/charts/forms-flow-analytics/templates/serviceaccount.yaml
+++ b/charts/forms-flow-analytics/templates/serviceaccount.yaml
@@ -1,13 +1,12 @@
-{{- if .Values.server.serviceAccount.create -}}
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "forms-flow-analytics.serviceAccountName" . }}
-  namespace: {{ include "common.names.namespace" . | quote }}
-  labels: {{- include "common.labels.standard" ( dict "customLabels" .Values.commonLabels "context" $ ) | nindent 4 }}
-  {{- if or .Values.server.commonAnnotations .Values.server.serviceAccount.annotations }}
-  {{- $annotations := include "common.tplvalues.merge" ( dict "values" ( list .Values.server.serviceAccount.annotations .Values.server.commonAnnotations ) "context" . ) }}
-  annotations: {{- include "common.tplvalues.render" ( dict "value" $annotations "context" $) | nindent 4 }}
+  name: {{ include "redash.serviceAccountName" . }}
+  labels:
+    {{- include "redash.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
   {{- end }}
-automountServiceAccountToken: {{ .Values.server.serviceAccount.automountServiceAccountToken }}
 {{- end -}}
