Deugging enabled in git action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          ACTIONS_RUNNER_DEBUG: true      # Enable runner debugging
+          ACTIONS_STEP_DEBUG: true        # Enable step-level debugging
