Created PR notification action and updated resources for forms-flow-analytics

--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -678,7 +678,7 @@ redisExporter:
   image:  
     registry: docker.io
     repository: redis
-    tag: 7.2.4-alpine
+    tag: 7.4.1
     pullPolicy: IfNotPresent
     pullSecrets: []
   livenessProbe:
