--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -13,6 +13,7 @@ data:
     DATABASE_PORT: {{ ternary .Values.formsflowdb.service.ports.postgresql "<DEFINE_ME>" .Values.formsflowdb.postgresql.enabled | quote }}
     DATABASE_SERVICE_NAME: {{ ternary (tpl .Values.formsflowdb.postgresql.fullnameOverride .) "<DEFINE_ME>" .Values.formsflowdb.postgresql.enabled | quote }}
     BPM_API_URL: https://{{tpl (index .Values "forms-flow-bpm" "ingress" "hostname") .}}/camunda
+    BPM_API_SERVICE_URL: {{tpl (index .Values "forms-flow-bpm" "service" "name") .}}:{{tpl (index .Values "forms-flow-bpm" "service" "port") .}}/camunda
     KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
     KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
     KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT: "300"
@@ -23,8 +24,10 @@ data:
     KEYCLOAK_URL: https://{{ tpl (index .Values "forms-flow-idm" "keycloak" "ingress" "hostname") . }}
     KEYCLOAK_URL_REALM: {{ index .Values "forms-flow-idm" "realm" }}
     FORMIO_URL: https://{{tpl (index .Values "forms-flow-forms" "ingress" "hostname") .}}
+    FORMIO_SERVICE_URL: {{tpl (index .Values "forms-flow-forms" "service" "name") .}}:{{tpl (index .Values "forms-flow-forms" "service" "port") .}}
     FORMIO_DOMAIN: https://{{tpl (index .Values "forms-flow-forms" "ingress" "hostname") .}}
     WEB_API_URL: https://{{tpl (index .Values "forms-flow-api" "ingress" "hostname") .}}
+    WEB_API_SERVICE_URL: {{tpl (index .Values "forms-flow-api" "service" "name") .}}:{{tpl (index .Values "forms-flow-api" "service" "port") .}}
     {{- if .Values.mongodb.enabled }} 
     NODE_CONFIG: '{"mongo":"mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}"}'
     MONGODB_URI:  {{ ternary (tpl "mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}" .) "<DEFINE_ME>" .Values.mongodb.enabled | quote }}
@@ -34,16 +37,19 @@ data:
     {{- end }}
     FORMSFLOW_WEB_URL: https://{{tpl (index .Values "forms-flow-web" "ingress" "hostname") .}}
     FORMSFLOW_ADMIN_URL: https://{{tpl (index .Values "forms-flow-admin" "ingress" "hostname") .}}/api/v1
+    FORMSFLOW_ADMIN_SERVICE_URL: {{tpl (index .Values "forms-flow-admin" "service" "name") .}}:{{tpl (index .Values "forms-flow-admin" "service" "port") .}}/api/v1
     FORMSFLOW_ADMIN_BASE: https://{{tpl (index .Values "forms-flow-admin" "ingress" "hostname") .}}/api
     MODEL_ID: "Seethal/sentiment_analysis_generic_dataset"
     INSIGHT_API_URL: https://{{tpl (index .Values "forms-flow-analytics" "ingress" "hostname") .}}
     KEYCLOAK_ENABLE_CLIENT_AUTH: "{{ index .Values "forms-flow-idm" "keycloak" "EnableKeycloakClientAuth" }}"
     MULTI_TENANCY_ENABLED: "{{index .Values "forms-flow-web" "EnableMultitenant" }}"
-    DATA_ANALYSIS_URL:  https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}
+    DATA_ANALYSIS_URL: https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}
+    DATA_ANALYSIS_SERVICE_URL: {{tpl (index .Values "forms-flow-data-analysis" "service" "name") .}}:{{tpl (index .Values "forms-flow-data-analysis" "service" "port") .}}
     NODE_ENV: "production"
     CUSTOM_SUBMISSION_URL: ""
     CUSTOM_SUBMISSION_ENABLED: "false"
     FORMSFLOW_DOC_API_URL: https://{{tpl (index .Values "forms-flow-documents-api" "ingress" "hostname") .}}
+    FORMSFLOW_DOC_API_SERVICE_URL: {{tpl (index .Values "forms-flow-documents-api" "service" "name") .}}:{{tpl (index .Values "forms-flow-documents-api" "service" "port") .}}
     DRAFT_ENABLED: "{{.Values.draft_enabled}}"
     DRAFT_POLLING_RATE: "15000"
     EXPORT_PDF_ENABLED: "{{.Values.export_pdf_enabled}}"
