--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -87,7 +87,7 @@ spec:
           - name: BPM_API_URL
             valueFrom:
               configMapKeyRef:
-                key: BPM_API_URL
+                key: BPM_API_SERVICE_URL
                 name: "{{ .Values.formsflow.configmap }}"
           - name: BPM_CLIENT_ID
             valueFrom:
