--- a/charts/forms-flow-analytics/templates/secrets.yaml
+++ b/charts/forms-flow-analytics/templates/secrets.yaml
@@ -15,5 +15,6 @@ data:
   {{- $null := required "A value for one of the following variables is required: redash.cookieSecret (secure random value), redash.existingSecret (secret name)" (or .Values.redash.cookieSecret .Values.redash.existingSecret) }}
   cookieSecret: {{ default "" .Values.redash.cookieSecret | b64enc | quote }}
   mailPassword: {{ default "" .Values.redash.mailPassword | b64enc | quote }}
+  redashDatabasePassword: {{ default "" .Values.postgresql.auth.password | b64enc | quote }}
   ## End primary Redash configuration
 {{- end -}}
