--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -569,7 +569,7 @@ migrations:
   priorityClassName:
 
 # externalPostgreSQL -- External PostgreSQL configuration. To use an external PostgreSQL instead of the automatically deployed postgresql chart: set postgresql.enabled to false then uncomment and configure the externalPostgreSQL connection URL (e.g. postgresql://user:pass@host:5432/database)
-externalPostgreSQL: postgresql://postgres:postgres@forms-flow-ai-postgresql-ha-pgpool/forms-flow-analytics
+externalPostgreSQL: 
 # externalPostgreSQLSecret -- Read external PostgreSQL configuration from a secret. This should point at a secret file with a single key which specifies the connection string.
 externalPostgreSQLSecret:
   {}
@@ -583,6 +583,7 @@ externalPostgreSQLSecret:
 postgresql:
   # postgresql.enabled -- Whether to deploy a PostgreSQL server to satisfy the applications database requirements. To use an external PostgreSQL set this to false and configure the externalPostgreSQL parameter.
   enabled: false
+  fullnameOverride: "forms-flow-ai-postgresql-ha-pgpool"
   primary:
     service:
       ports:
@@ -592,11 +593,11 @@ postgresql:
   
   auth:
     # postgresql.auth.username -- PostgreSQL username for redash user (when postgresql chart enabled)
-    username: redash
+    username: postgres
     # postgresql.auth.password -- REQUIRED: PostgreSQL password for redash user (when postgresql chart enabled)
-    password:
+    password: postgres
   # postgresql.auth.database -- PostgreSQL database name (when postgresql chart enabled)
-    database: redash
+    database: forms-flow-analytics
 
 # externalRedis -- External Redis configuration. To use an external Redis instead of the automatically deployed redis chart: set redis.enabled to false then uncomment and configure the externalRedis connection URL (e.g. redis://user:pass@host:6379/database).
 externalRedis: redis://redis-exporter:6379/0
